Make index links be pills and fix some layout issues in cv

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -11,7 +11,7 @@ div#__next {
   min-height: 100vh;
 
   header {
-    z-index: 1001;
+    z-index: 1000;
   }
 
   main {
