--- a/styles/recipes/_pill.scss
+++ b/styles/recipes/_pill.scss
@@ -46,10 +46,3 @@
     }
   }
 }
-
-@media screen and (max-width: 767px) {
-  .pill {
-    height: 18px;
-    line-height: 18px;
-  }
-}
